--- a/.devcontainer/Dockerfile.devcontainer
+++ b/.devcontainer/Dockerfile.devcontainer
@@ -37,7 +37,7 @@ RUN --mount=type=cache,target=/var/lib/apt/lists \
 # Switch to non-root user
 USER $USERNAME
 ENV HOME_PATH="/home/$USERNAME"
-ENV PACKAGES_PATH="${HOME_PATH}/.venv/lib/${PYTHON_VERSION}/site-packages/"
+ENV PACKAGES_PATH="${HOME_PATH}/.venv/lib/${PYTHON_VERSION}/site-packages"
 ARG CACHEBUST=1
 
 # Setup virtual env
@@ -54,8 +54,8 @@ RUN rm -rf ${PACKAGES_PATH}/torch* \
     && rm -rf ${PACKAGES_PATH}/torchvision* \
     && cd /opt/conda/lib/${PYTHON_VERSION}/site-packages \
     # && cp -rp torch ${HOME_PATH}/.venv/lib/${PYTHON_VERSION}/site-packages/ 
-    && cp -rp torch* ${PACKAGES_PATH} \
-    && cp -rp torchvision* ${PACKAGES_PATH}
+    && cp -rp torch* ${PACKAGES_PATH}/ \
+    && cp -rp torchvision* ${PACKAGES_PATH}/
 
 # Create download directory
 ARG DOWNLOAD_PATH="${HOME_PATH}/downloads"
@@ -64,12 +64,16 @@ RUN mkdir ${DOWNLOAD_PATH}
 
 # Download exllamav2-0.1.8+cu121.torch2.2.2-cp310-cp310-linux_x86_64.whl
 RUN wget "https://github.com/turboderp/exllamav2/releases/download/v0.1.8/exllamav2-0.1.8+cu121.torch2.2.2-cp310-cp310-linux_x86_64.whl" -P ${DOWNLOAD_PATH}
-# RUN pip install --no-cache-dir --no-deps --no-index --find-links ${PACKAGES_PATH} ${DOWNLOAD_PATH}/exllamav2-0.1.8+cu121.torch2.2.2-cp310-cp310-linux_x86_64.whl
-
 
 # Download llama_cpp_python-0.2.90-cp310-cp310-linux_x86_64.whl
 RUN wget "https://github.com/abetlen/llama-cpp-python/releases/download/v0.2.90-cu121/llama_cpp_python-0.2.90-cp310-cp310-linux_x86_64.whl" -P ${DOWNLOAD_PATH}
-#RUN pip install --no-cache-dir --no-deps --no-index --find-links ${PACKAGES_PATH} ${DOWNLOAD_PATH}/llama_cpp_python-0.2.90-cp310-cp310-linux_x86_64.whl
+
+#-----
+
+# Install exllamav2
+# RUN pip install --no-cache-dir --no-deps --no-index --find-links ${PACKAGES_PATH} ${DOWNLOAD_PATH}/exllamav2-0.1.8+cu121.torch2.2.2-cp310-cp310-linux_x86_64.whl
+# Install llama_cpp_python
+# RUN pip install --no-cache-dir --no-deps --no-index --find-links ${PACKAGES_PATH} ${DOWNLOAD_PATH}/llama_cpp_python-0.2.90-cp310-cp310-linux_x86_64.whl
 
    
 # Download llama_cpp_python-0.2.90-cp310-cp310-linux_x86_64.whl
