--- a/.devcontainer/Dockerfile.devcontainer
+++ b/.devcontainer/Dockerfile.devcontainer
@@ -56,6 +56,19 @@ RUN source ${HOME_PATH}/.venv/bin/activate \
         
 #Install torch
 COPY --chown=${USERNAME} --from=base /tmp/gai-downloads /tmp/gai-downloads
-RUN source ${HOME_PATH}/.venv/bin/activate && pip install --no-cache-dir --no-deps --no-index --find-links /tmp/gai-downloads /tmp/gai-downloads/torch-2.2.0+cu121-cp310-cp310-linux_x86_64.whl
+RUN source ${HOME_PATH}/.venv/bin/activate \
+    && pip install /tmp/gai-downloads/triton-2.2.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl \
+    && pip install /tmp/gai-downloads/nvidia_cuda_nvrtc_cu12-12.1.105-py3-none-manylinux1_x86_64.whl \
+    && pip install /tmp/gai-downloads/nvidia_cublas_cu12-12.1.3.1-py3-none-manylinux1_x86_64.whl \
+    && pip install /tmp/gai-downloads/nvidia_cudnn_cu12-8.9.2.26-py3-none-manylinux1_x86_64.whl \
+    && pip install /tmp/gai-downloads/nvidia_cusparse_cu12-12.1.0.106-py3-none-manylinux1_x86_64.whl \
+    && pip install /tmp/gai-downloads/nvidia_curand_cu12-10.3.2.106-py3-none-manylinux1_x86_64.whl \
+    && pip install /tmp/gai-downloads/nvidia_cusolver_cu12-11.4.5.107-py3-none-manylinux1_x86_64.whl \
+    && pip install /tmp/gai-downloads/nvidia_nccl_cu12-2.19.3-py3-none-manylinux1_x86_64.whl \
+    && pip install /tmp/gai-downloads/nvidia_cuda_cupti_cu12-12.1.105-py3-none-manylinux1_x86_64.whl \
+    && pip install /tmp/gai-downloads/nvidia_nvtx_cu12-12.1.105-py3-none-manylinux1_x86_64.whl \
+    && pip install /tmp/gai-downloads/nvidia_cufft_cu12-11.0.2.54-py3-none-manylinux1_x86_64.whl \
+    && pip install --no-cache-dir --no-deps --no-index --find-links /tmp/gai-downloads /tmp/gai-downloads/torch-2.2.0+cu121-cp310-cp310-linux_x86_64.whl
+RUN rm /tmp/gai-downloads/triton-* /tmp/gai-downloads/nvidia_*
 
 COPY --chown=${USERNAME} .devcontainer/postCreateCommand.sh ${HOME_PATH}/postCreateCommand.sh
