--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-	"name": "gai-torch2.2.0-cuda12.1-ubuntu22.04-builder",
+	"name": "gai_torch2.2.0_cuda12.1_ubuntu22.04_base",
 	"build": {
 		"dockerfile": "Dockerfile",
 		"args": {
